# borovylo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gulpfile.js  package-lock.json  package.json
cmake/: reaper_plugin.cmake  version.rc.in
src/: borovylo.cpp  borovylo.h  cabl_device.cpp  csurf_cabl.cpp  csurf_cabl.h  main.cpp
src/cablDevice/: CMakeLists.txt  deviceFeedback.cpp  deviceFeedback.h
